feat: adiciona função atribuir automaticamente clientes ao evento
